--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,136 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Barlow Condensed", sans-serif;
+  font-family: "Cairo", sans-serif;
+  font-family: "Dancing Script", cursive;
+  font-family: "Pacifico", cursive;
+  font-family: "Work Sans", sans-serif;
+  overflow-y: hidden;
+}
+main {
+  padding: 36px;
+}
+
+.meme_header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #333333; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #dd1818,
+    #333333
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #dd1818,
+    #333333
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  color: white;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
+.meme_logo {
+  height: 40px;
+  width: 100px;
+}
+.form {
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  gap: 17px;
+}
+.form--button {
+  grid-column: 1/-1;
+  font-family: "Barlow Condensed", sans-serif;
+  font-family: "Cairo", sans-serif;
+  font-family: "Dancing Script", cursive;
+  font-family: "Pacifico", cursive;
+  font-family: "Work Sans;", sans-serif;
+  color: white;
+  font-size: 150%;
+  border-radius: 5px;
+  background: #360033; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #0b8793,
+    #360033
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #0b8793,
+    #360033
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  height: 80px;
+  border: 1px solid #d5d4d8;
+  cursor: pointer;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
+.form--input {
+  font-family: "Barlow Condensed", sans-serif;
+  font-family: "Cairo", sans-serif;
+  font-family: "Dancing Script", cursive;
+  font-family: "Pacifico", cursive;
+  font-family: "Work Sans;", sans-serif;
+  color: black;
+  font-size: 120%;
+  border: 1px solid #d5d4d8;
+  border-radius: 5px;
+  padding: 5px;
+}
+.MemeImage {
+  /* max-width: 100%;
+ 
+  /* margin-left: 400px;
+  margin-right: auto; */
+  min-width: 100%;
+  max-width: 100%;
+  border-radius: 3px;
+  margin-top: 50px;
+  /* margin-left: 10px;
+  margin-right: 10px; */
+}
+.meeme {
+  position: relative;
+}
+.meme--text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 70px 0px 30px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000,
+    -2px 2px 0 #000, 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000,
+    2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
+}
+
+@media only screen and (max-width: 768px) {
+  .meme_header {
+    min-width: 100%;
+  }
+
+  .form--input {
+    width: 100%;
+  }
 }
